log
Tue 18 Apr 2023 04:03:48 AM UTC: 
 tests:  0|4
total_score: 0/70
9f5a199
Sun 23 Apr 2023 12:17:16 AM UTC: 
 heap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  1|3
total_score: 10/70
0b3f31e
Sun 23 Apr 2023 12:19:59 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:28:25: error: incompatible types when initializing type ‘heapElem *’ {aka ‘struct nodo *’} using type ‘heapElem’ {aka ‘struct nodo’}
   28 |     heapElem* primero = pq->heapArray[0];
      |                         ^~
Compilation failed
47f0dfc
Sun 23 Apr 2023 12:21:58 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:28:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   28 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:29:1: error: control reaches end of non-void function [-Werror=return-type]
   29 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0b4fd6e
Sun 23 Apr 2023 12:22:06 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b7937f8
Sun 23 Apr 2023 12:22:23 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
261aa4b
